# monty

./: .gitignore  0x00-monty_utils.c  0x00-ops.c  0x01-monty_utils.c  0x01-ops.c  0x02-monty_utils.c  0x02-ops.c  0x03-ops.c  CMakeLists.txt  main  main.c  monty.c  monty.h  monty.m  ops.h  run.sh  stack_push.c  utils.h
